--- a/framework/core/less/forum/Hero.less
+++ b/framework/core/less/forum/Hero.less
@@ -2,7 +2,7 @@
   margin-top: -1px;
   background: var(--hero-bg);
   text-align: center;
-  color: var(--hero-color);
+  color: var(--contrast-color, var(--hero-color));
 
   h2 {
     margin: 0;
